fix: scroll unnecessary scrollbar in tableLabeling

--- a/src/react/components/common/tagInput/tableTagLabeling.scss
+++ b/src/react/components/common/tagInput/tableTagLabeling.scss
@@ -7,9 +7,6 @@
         color: rgba(255, 255, 255, 0.6);
         }
     .table-view-container {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
         overflow: auto;
         margin: 1rem;
 
@@ -48,7 +45,7 @@
 
                 }
             }
-                
+
 
         }
     }
